--- a/index.html
+++ b/index.html
@@ -503,9 +503,11 @@
 
               <div class="bank-details">
                 <h4>Реквізити:</h4>
-                <p>ЄДРПОУ: 32179838</p>
-                <p>р/р UA683154050000026009060101411</p>
-                <p>ПриватБанк</p>
+                <p>Найменування отримувача: МПП «Правозахист»</p>
+                <p>Код отримувача (ЄДРПОУ): 32179838</p>
+                <p>Рахунок отримувача: UA243052990000026009036009358</p>
+                <p>Банк: АТ КБ "ПРИВАТБАНК"</p>
+                <p>Призначення платежу: За навчання</p>
               </div>
             </div>
             <div class="contact-map">
