--- a/registration.html
+++ b/registration.html
@@ -915,13 +915,17 @@
         <div class="payment-notice" id="paymentNotice">
           <h2><i class="fa-solid fa-info-circle"></i> Увага!</h2>
           <p class="payment-amount">
-            Вартість реєстрації: <span>100 грн</span>
+            Вартість реєстрації: <span>350 грн</span>
           </p>
           <div class="payment-details">
             <h4>Реквізити для оплати:</h4>
-            <p><strong>ЄДРПОУ:</strong> 32179838</p>
-            <p><strong>р/р:</strong> UA683154050000026009060101411</p>
-            <p><strong>Банк:</strong> ПриватБанк</p>
+            <p><strong>Найменування отримувача:</strong> МПП «Правозахист»</p>
+            <p><strong>Код отримувача (ЄДРПОУ):</strong> 32179838</p>
+            <p>
+              <strong>Рахунок отримувача:</strong> UA243052990000026009036009358
+            </p>
+            <p><strong>Банк:</strong> АТ КБ "ПРИВАТБАНК"</p>
+            <p><strong>Призначення платежу:</strong> За навчання</p>
           </div>
         </div>
 
